fix text alignment

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -354,7 +354,7 @@
     }
 
     @include breakpoint($small) {
-      text-align: right;
+      text-align: left;
 
       .archive__item-teaser {
         float: right;
